add assignments and Lab

--- a/Labs/LAB-1/index.html
+++ b/Labs/LAB-1/index.html
@@ -122,11 +122,11 @@
             </aside>
             <section>
                 <h2>This is video.</h2>
-                <video src="./video.mp4" controls>
+                <video src="./assets/Encara messi encara messi encara messi encara messi.mp4" controls>
                 </video>
                 <br>
                 <h2>This is audio.</h2>
-                <audio src="" controls>
+                <audio src="./assets/Bipul Chettri - Syndicate (Album - Maya).mp3" controls>
                 </audio>
             </section>
             <h1>Text formatting tags.</h1>
